--- a/sell/index.html
+++ b/sell/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="static/css/reset.css">
 
 <body>
-  <app></app>
+  <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
 
